fix calendar width on mobile

--- a/client/stylesheets/sass/pages/calendar.scss
+++ b/client/stylesheets/sass/pages/calendar.scss
@@ -6,7 +6,7 @@
   }
 }
 #myCalendar {
-    width: 900px;
+    width: 90%;
     margin: 2em auto;
     padding: 1.5em;
     background-color: $white;
